--- a/example.env
+++ b/example.env
@@ -1,7 +1,8 @@
-MYSQL_DB=cloud-api
-MYSQL_USER=root
-MYSQL_PASSWORD=root
-MYSQL_HOST=db
+MYSQL_DATABASE=YOUR_DB_NAME
+MYSQL_USER=YOUR_USERNAME
+MYSQL_PASSWORD=YOUR_PASSWORD
+MYSQL_HOST=db# do not change
 MYSQL_PORT=3306
+MYSQL_RANDOM_ROOT_PASSWORD=True
 
 DEBUG=True
