--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3.9'
 
 services:
   db:
@@ -6,23 +6,27 @@ services:
     container_name: db
     volumes:
       - mysql-volume:/var/lib/mysql
-    environment:
-      MYSQL_DATABASE: cloud-api
-      MYSQL_USER: cloud-api-user
-      MYSQL_PASSWORD: cloud-api-password
-      MYSQL_ROOT_PASSWORD: root
+    env_file:
+      - .env
     networks:
       - djangonetwork
+    healthcheck:
+      test: mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD
+      start_period: 5s
+      interval: 5s
+      timeout: 5s
+      retries: 55
   app:
     build: .
     command: bash -c "python /usr/src/cloud_api/manage.py migrate --noinput &&
-             python /usr/src/cloud_api/manage.py runserver 0.0.0.0:8000"
+      python /usr/src/cloud_api/manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/usr/src/cloud_api
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - djangonetwork
 
